--- a/views/finance/changePassword.ejs
+++ b/views/finance/changePassword.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/layout') %>
 <!-- <h1>CHANGE PASSWORD</h1> -->
 <form action="/finance/changePassword?_method=PUT" method="POST">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class="mb-3">
         <input autofocus class="form-control mx-auto w-auto" name="oldPassword" placeholder="Current Password" type="password">
     </div>
