--- a/views/finance/login.ejs
+++ b/views/finance/login.ejs
@@ -2,6 +2,7 @@
 <!-- <h1>LOGIN</h1> -->
 
 <form action="/finance/login" method="post">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
     </div>
