--- a/views/finance/sell.ejs
+++ b/views/finance/sell.ejs
@@ -3,6 +3,7 @@
 
 
 <form action="/finance/sell" method="post">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class="mb-3">
         <select class="form-select mx-auto w-auto" name="symbol">
             <option disabled selected>Symbol</option>
